--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Shaz's Page</title>
   </head>
     <body>
-      <h1>Hello, World!</h1>
-      Welcome to Shaz's Page 
+      <h1>Ellszilla</h1>
+      Roaaar
+      Ellson's a jokeman
       
     </body>
     </html>
