--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>Shaz's Page</title>
   </head>
     <body>
-      <h1>Ellszilla</h1>
-      Roaaar
-      Ellson's a jokeman
+      <h1>Hi</h1>
+      Welcome to My World
       
     </body>
     </html>
